--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,6 @@
+<html>
+
 <head>
-<title><%= title%></title>
-<link rel="icon" href="https://iconarchive.com/download/i99749/sonya/swarm/Shopping.ico" />
+	<title><%= title%></title>
+	<link rel="icon" href="https://iconarchive.com/download/i99749/sonya/swarm/Shopping.ico" />
 </head>
