--- a/views/products.ejs
+++ b/views/products.ejs
@@ -35,7 +35,7 @@
 			products.forEach(product => {
 
 				const productDiv = document.createElement('a');
-				productDiv.href = window.location.href + "/" + `${product.productid}`;
+				productDiv.href = window.location.href + "/" + `${product.productid}` + "/" + `${product.name}`;
 
 				productDiv.innerHTML = `
 					<img src="${product.imageurl}">
