Adding contollers and models

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,22 +29,7 @@
 			const categoriesContainer = document.getElementById('index-category');
 
 			
-			// Render categories dynamically
-			categories.forEach(category => {
-
-				const categoryDiv = document.createElement('a');
-
-				categoryDiv.href = window.location.href + "/" + `${category.categoryname}`;
-
-				categoryDivBox = categoryDiv.classList.add('index-category-box');
-
-				categoryDiv.style.backgroundImage = `url(${category.imageurl})`; // Set background image
-
-				categoryDiv.innerHTML = `<div class="dark-overlay"></div><h3>${category.categoryname}</h3>`;
-
-				categoriesContainer.appendChild(categoryDiv);
-
-			});
+			console.log(dealOfDay[0]);
 		} catch (error) {
 			console.error('Error fetching categories:', error);
 		}
