Transform to MVC model

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
 			const categoriesContainer = document.getElementById('index-category');
 
 			
-			console.log(dealOfDay[0]);
+			// console.log(dealOfDay[0]);
 		} catch (error) {
 			console.error('Error fetching categories:', error);
 		}
