--- a/views/productdetails.ejs
+++ b/views/productdetails.ejs
@@ -26,9 +26,7 @@
 			const response = await fetch(window.location.href +'/info');
 			const details = await response.json();
 
-			console.log(details);
-
-			
+			// console.log(details);
 
 
 			const productdetailContainer = document.getElementById('index-product');
