--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -12,6 +12,7 @@
 		<section class="index-category" id="index-category">
 			<p>Categories</p>
 
+
 			<!-- <a href="" class="index-category-box">
 				<div class="dark-overlay"></div>
 				<h3>Electronics</h3>
@@ -32,36 +33,42 @@
 	<script>
 		// Fetch categories from the server and render them on the page
 		async function fetchCategories() {
-			try {
-				const response = await fetch('/categories/all');
-				const categories = await response.json();
+		 	try {
 
-	
-				const categoriesContainer = document.getElementById('index-category');
+				const categories = <%- JSON.stringify(categories).replace(/</g, '\\u003c') %>; // Embed data without HTML entities
+
+				// console.log(categories);
 
 				
-				// Render categories dynamically
-				categories.forEach(category => {
+	
+		 		const categoriesContainer = document.getElementById('index-category');
 
-					const categoryDiv = document.createElement('a');
+				
+		 		// Render categories dynamically
+		 		categories.forEach(category => {
 
-					categoryDiv.href = window.location.href + "/" + `${category.categoryname}`;
+					// console.log(`Category Name: ${category.name}`);
+
+		 			const categoryDiv = document.createElement('a');
+
+					categoryDiv.href = window.location.href + "/" + `${category.name}`;
 
 					categoryDivBox = categoryDiv.classList.add('index-category-box');
 
 					categoryDiv.style.backgroundImage = `url(${category.imageurl})`; // Set background image
 
-					categoryDiv.innerHTML = `<div class="dark-overlay"></div><h3>${category.categoryname}</h3>`;
+					categoryDiv.innerHTML = `<div class="dark-overlay"></div><h3>${category.name}</h3>`;
 
 					categoriesContainer.appendChild(categoryDiv);
 
-				});
-			} catch (error) {
-				console.error('Error fetching categories:', error);
-			}
+		 		});
+
+		 	} catch (error) {
+		 		console.error('Error fetching categories:', error);
+		 	}
 		}
 	
-		// Call the function to fetch and display categories when the page loads
+		// // Call the function to fetch and display categories when the page loads
 		fetchCategories();
 	</script>
 </body>
