--- a/views/productdetails.ejs
+++ b/views/productdetails.ejs
@@ -23,48 +23,54 @@
 	// Fetch products from the server and render them on the page
 	async function fetchProductDetails() {
 		try {
-			const response = await fetch(window.location.href +'/info');
-			const details = await response.json();
-
-			// console.log(details);
-
+			const productdetails = <%- JSON.stringify(productDetail).replace(/</g, '\\u003c') %>; // Embed data without HTML entities
+			console.log(productdetails);
 
 			const productdetailContainer = document.getElementById('index-product');
-			//const showDiv = document.createElement('a');
 
 			productdetailContainer.innerHTML = `
-				<img src="${details[0].prodimg}">
-				<h2>${details[0].prdname}</h2>
-				<dic class="descr">${details[0].description}</div>
-				<div class="price">${details[0].price}</div>
+				<img src="${productdetails[0].prdimg}">
+				<h2>${productdetails[0].name}</h2>
+				<dic class="descr">${productdetails[0].description}</div>
 			`;
 
-			//showDivBox = showDiv.classList.add('index-product-box');
-			//productdetailContainer.appendChild(showDiv);
-			
-			
-			
 			const retailersContainer = document.getElementById('index-retailer');
 
-			// Render retailers dynamically
-			details.forEach(retailer => {
+			if (productdetails[0]["ProductRetailers.Price"] === null || productdetails[0]["ProductRetailers.Price"] === "undefined")
+			{
+				retailersContainer.innerHTML = `<h2>Retailers not found</h2>`;
+			}
+			else
+			{
+				// Render retailers dynamically
+				productdetails.forEach(retailer => {
 
-				const retailDiv = document.createElement('div');
-				retailDiv.classList.add('retailer');
+					const retailDiv = document.createElement('div');
+					retailDiv.classList.add('retailer');
 
 
-				retailDiv.innerHTML = `
-					
-					<a href="${retailer.website}"><img src="${retailer.retailerimg}"></a>
-					<a class="prdlink" href="${retailer.productlink}">
-						${retailer.retailname}
-						${retailer.prdname}
-						<div class="price">${retailer.price}</div>
-					</a>
-				`;
+					retailDiv.innerHTML = `
+						
+						<a href="${retailer["ProductRetailers.Retailer.Website"]}"><img src="${retailer["ProductRetailers.Retailer.retailerimg"]}"></a>
+						<a class="prdlink" href="${retailer["ProductRetailers.PRODUCTLINK"]}" target="_blank">
+							${retailer["ProductRetailers.Retailer.Name"]} - ${retailer.name}
+							<div class="price">${retailer["ProductRetailers.Price"]}</div>
+						</a>
+						<form action="/cart/add" method="POST">
+							<input type="hidden" name="productId" >
+							<button type="submit1" class="add-to-cart-button">
+								<svg class="cart-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+							</button>
+							
+						</form>
+						
 
-				retailersContainer.appendChild(retailDiv);
-			});
+					`;
+
+					retailersContainer.appendChild(retailDiv);
+				});
+			}
+			
 
 			
 		} catch (error) {
