--- a/views/style/eachproduct.css
+++ b/views/style/eachproduct.css
@@ -60,15 +60,26 @@
 
 
 .add-to-cart-button {
+	min-width: 55px;
+	overflow: hidden;
+	outline: none;
+	padding: 0.7rem;
+	text-transform: uppercase;
+	transition: 0.4s ease;
+	width: auto;
+	display: inline-flex;
 	margin-top: 20%;
 	margin-right: 10%;
+
+	margin-left: 20px;
+
 	background: #e6a247;
 	border: none;
 	border-radius: 4px;
 	-webkit-box-shadow: 0 3px 13px -2px rgba(0, 0, 0, .15);
 	box-shadow: 0 3px 13px -2px rgba(0, 0, 0, .15);
 	color: #fff;
-	display: flex;
+	display: flex; 
 	font-family: 'Ubuntu', sans-serif;
 	justify-content: space-around;
 	min-width: 55px;
@@ -80,6 +91,7 @@
 	transition: 0.4s ease;
 	width: auto;
 }
+
 .add-to-cart-button:active {
 	-webkit-box-shadow: 0 0 0 0.2rem rgba(252, 186, 3, .45);
 	box-shadow: 0 0 0 0.2rem rgba(252, 186, 3, .45);
