--- a/views/productdetails.ejs
+++ b/views/productdetails.ejs
@@ -6,6 +6,12 @@
 
 	<br><br><br>
 
+	<% if (message) { %>
+		<div class="alert alert-success">
+			<%= message %>
+		</div>
+	<% } %>
+
 
 	<div class="prod-retail">
 		<div class="show" id="show">
@@ -57,12 +63,12 @@
 							<div class="price">${retailer["ProductRetailers.Price"]}</div>
 						</a>
 						<form action="/cart/add" method="POST">
-							<input type="hidden" name="ProductID" value="${productdetails[0].productid}" />
-							<input type="hidden" name="RetailerID" value="${retailer["ProductRetailers.Retailer.RetailerId"]}" />
-							<button type="submit1" class="add-to-cart-button">
+							<input type="hidden" name="productId" value="${productdetails[0].productid}" />
+							<input type="hidden" name="retailerId" value="${retailer["ProductRetailers.Retailer.RetailerId"]}" />
+							<input type="hidden" name="quantity" value="1" />
+							<button type="submit" class="add-to-cart-button">
 								<svg class="cart-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
 							</button>
-
 						</form>
 						
 
@@ -72,19 +78,14 @@
 				});
 			}
 			
-
-			
 		} catch (error) {
 			console.error('Error fetching product details: ', error);
 		}
 	}
 
-
-
-	onclick="addToCart(123)"
-
 	// Call the function to fetch and display products when the page loads
 	fetchProductDetails();
+	
 </script>
 
 <%- include('./partials/footer.ejs') %>
