--- a/views/style/eachproduct.css
+++ b/views/style/eachproduct.css
@@ -53,12 +53,6 @@
 
 
 
-
-
-
-
-
-
 .add-to-cart-button {
 	min-width: 55px;
 	overflow: hidden;
@@ -106,4 +100,19 @@
 	box-shadow: 0 0 0 0.2rem rgba(252, 186, 3, .45);
 	-webkit-transform: translateY(-1px);
 	transform: translateY(-1px);
+}
+
+
+.alert {
+    margin: 20px 0;
+    padding: 15px;
+    color: #ffffff;
+    background-color: #28a745;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.alert.alert-success {
+    background-color: #28a745;
 }
