--- a/views/style/nav_bar.css
+++ b/views/style/nav_bar.css
@@ -84,6 +84,17 @@ header {
 	scale: 0.95;
 }
 
+.cart-count {
+    position: absolute;
+    /* top: -1;
+    right: -1; */
+    background-color: red;
+    color: white;
+    font-size: 16px;
+    padding: 3px 6px;
+    border-radius: 50%;
+}
+
 /* DROPDOWN MENU */
 .dropdown_menu {
 	display: none;
