--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,11 @@
 			<li><a href="/categories">Categories</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
-		<a href="/cart" class="action_btn"><i class="fa fa-shopping-cart" style="font-size:16px"></i></a>
+		<a href="/cart" class="action_btn"><i class="fa fa-shopping-cart" style="font-size:16px"></i>
+			<% if (session.cart && session.cart.totalQuantity > 0) { %>
+				<span class="cart-count"><%= session.cart.totalQuantity %></span>
+			<% } %>
+		</a>
 		<div class="toggle_btn"><i class="fa-solid fa-bars"></i></div>
 	</div>
 
@@ -20,7 +24,11 @@
 		<li><a href="/">Home</a></li>
 		<li><a href="/categories">Categories</a></li>
 		<li><a href="/contact">Contact</a></li>
-		<li><a href="/cart" class="action_btn"><i class="fa fa-shopping-cart" style="font-size:16px"></i></a></li>
+		<li><a href="/cart" class="action_btn"><i class="fa fa-shopping-cart" style="font-size:16px"></i>
+			<% if (session.cart && session.cart.totalQuantity > 0) { %>
+				<span class="cart-count"><%= session.cart.totalQuantity %></span>
+			<% } %>
+		</a></li>
 	</div>
 
 
