--- a/views/style/contact.css
+++ b/views/style/contact.css
@@ -65,11 +65,11 @@
 }
 
 .contact {
-	background: rgba(255, 255, 255, 0.2);
+	background: rgba(32, 26, 26, 0.2);
 }
 
 .cont-form {
-	background-color: bisque;
+	background-color: rgb(139, 83, 14);
 	padding: 50px 50px;
 }
 
