--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,4 +5,6 @@
 <head>
 	<title><%= title%></title>
 	<link rel="icon" href="https://iconarchive.com/download/i99749/sonya/swarm/Shopping.ico" />
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
