--- a/views/style/contact.css
+++ b/views/style/contact.css
@@ -4,7 +4,8 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	color: black;
+	color: rgb(255, 255, 255);
+	
 }
 
 .contact .content {
@@ -62,10 +63,7 @@
 .container .contactInfo .box .text h3 {
 	font-weight: 500;
 	color: white;
-}
-
-.contact {
-	background: rgba(32, 26, 26, 0.2);
+	
 }
 
 .cont-form {
