Update: - Fix Search showing prices

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -16,11 +16,7 @@
     <div class="products-container" id="products-container">
 		<!-- Categories will be added here dynamically -->
 		<h1>Search Results for: <%= query %></h1>
-		<section class="index-product" id="index-product">
-			
-
-		
-		</section>
+		<section class="index-product" id="index-product"></section>
 	</div>
 </body>
 
