--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -37,14 +37,8 @@
 		<button type="submit" class="searchButton" onclick="searchRedirect()">
 			<i class="fa fa-search"></i>
 		</button>
-
 		<input type="text" class="searchTerm" id="search-input" placeholder="What are you looking for?" onkeyup="searchProducts()">
-
 		<ul id="search-results" class="dropdown-list"></ul>
-		
-		<!-- <button type="submit" class="listButton" onclick="showCategories()">
-			<i class="fa-solid fa-list"></i>
-		</button> -->
 	</div>
 </header>
 
@@ -93,7 +87,7 @@
 							productInfo.innerHTML = `
 								<img src="${product.imageurl}" alt="${product.name}" style="width: 50px; height: 50px; object-fit: cover;">
 								<p>${product.name}</p>
-								<p>Price: $${product.lowestPrice}</p>
+								<p>Price: $${product.minprice}</p>
 							`;
 							
 							listItem.appendChild(productInfo);
