--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,6 +12,29 @@
 			<li><a href="/categories">Categories</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
+
+		<!-- Dynamic Sign In/Sign Up or Profile Icon -->
+        <% if (session.user) { %>
+            <!-- User Logged In: Profile Icon -->
+            <li class="dropdown">
+                <button class="profile-btn">
+                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                </button>
+                <div class="dropdown-menu">
+                    <a href="/profile">My Profile</a>
+                    <a href="/orders">My Orders</a>
+                    <a href="/reviews">My Reviews</a>
+                    <form action="/logout" method="POST">
+                        <button type="submit" class="logout-btn">Logout</button>
+                    </form>
+                </div>
+            </li>
+        <% } else { %>
+            <!-- User Not Logged In: Sign In/Sign Up Buttons -->
+            <li><a href="/login" class="nav-btn">Sign In/Sign Up</a></li>
+            <li><a href="/signup" class="nav-btn"></a></li>
+        <% } %>
+
 		<a href="/cart" class="action_btn">
 			<i class="fa fa-shopping-cart" style="font-size: 20px; position: relative;"></i>
 			<% if (session.cart && session.cart.totalQuantity > 0) { %>
@@ -25,6 +48,30 @@
 		<li><a href="/">Home</a></li>
 		<li><a href="/categories">Categories</a></li>
 		<li><a href="/contact">Contact</a></li>
+
+		<!-- Dynamic Sign In/Sign Up or Profile Icon -->
+        <% if (session.user) { %>
+            <!-- User Logged In: Profile Icon -->
+            <li class="dropdown">
+                <button class="profile-btn">
+                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                </button>
+                <div class="dropdown-menu">
+                    <a href="/profile">My Profile</a>
+                    <a href="/orders">My Orders</a>
+                    <a href="/reviews">My Reviews</a>
+                    <form action="/logout" method="POST">
+                        <button type="submit" class="logout-btn">Logout</button>
+                    </form>
+                </div>
+            </li>
+        <% } else { %>
+            <!-- User Not Logged In: Sign In/Sign Up Buttons -->
+            <li><a href="/login" class="nav-btn">Sign In/Sign Up</a></li>
+            <li><a href="/signup" class="nav-btn">Sign Up</a></li>
+        <% } %>
+
+
 		<li><a href="/cart" class="action_btn"><i class="fa fa-shopping-cart" style="font-size:16px"></i>
 			<% if (session.cart && session.cart.totalQuantity > 0) { %>
 				<span class="cart-count"><%= session.cart.totalQuantity %></span>
