--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -24,15 +24,14 @@
                     <a href="/profile">My Profile</a>
                     <a href="/orders">My Orders</a>
                     <a href="/reviews">My Reviews</a>
-                    <form action="/logout" method="POST">
+                    <form action="/login/logout" method="POST">
                         <button type="submit" class="logout-btn">Logout</button>
                     </form>
                 </div>
             </li>
         <% } else { %>
             <!-- User Not Logged In: Sign In/Sign Up Buttons -->
-            <li><a href="/login" class="nav-btn">Sign In/Sign Up</a></li>
-            <li><a href="/signup" class="nav-btn"></a></li>
+            <li><a href="/login" class="nav-btn">Sign In</a></li>
         <% } %>
 
 		<a href="/cart" class="action_btn">
@@ -60,15 +59,14 @@
                     <a href="/profile">My Profile</a>
                     <a href="/orders">My Orders</a>
                     <a href="/reviews">My Reviews</a>
-                    <form action="/logout" method="POST">
+                    <form action="/login/logout" method="POST">
                         <button type="submit" class="logout-btn">Logout</button>
                     </form>
                 </div>
             </li>
         <% } else { %>
             <!-- User Not Logged In: Sign In/Sign Up Buttons -->
-            <li><a href="/login" class="nav-btn">Sign In/Sign Up</a></li>
-            <li><a href="/signup" class="nav-btn">Sign Up</a></li>
+            <li><a href="/login" class="nav-btn">Sign In</a></li>
         <% } %>
 
 
@@ -107,9 +105,6 @@
 	// Function to fetch product suggestions as the user types
 	function searchProducts() {
 		let query = document.getElementById("search-input").value;
-
-		console.log(query);
-
 
 		if (query.length > 0) {
 			// Updated fetch URL to match the backend route
