--- a/views/style/contact.css
+++ b/views/style/contact.css
@@ -5,7 +5,7 @@
 	align-items: center;
 	flex-direction: column;
 	color: rgb(255, 255, 255);
-	
+	background-color: #29262633;
 }
 
 .contact .content {
@@ -63,7 +63,6 @@
 .container .contactInfo .box .text h3 {
 	font-weight: 500;
 	color: white;
-	
 }
 
 .cont-form {
