--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,6 +7,20 @@
 <header>
 	<div class="navbar">
 		<div class="logo"><a href="/">BudgetBuddy</a></div>
+
+
+		<div class="inputBox_container">
+			<svg class="search_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" alt="search icon">
+				<path d="M46.599 46.599a4.498 4.498 0 0 1-6.363 0l-7.941-7.941C29.028 40.749 25.167 42 21 42 9.402 42 0 32.598 0 21S9.402 0 21 0s21 9.402 21 21c0 4.167-1.251 8.028-3.342 11.295l7.941 7.941a4.498 4.498 0 0 1 0 6.363zM21 6C12.717 6 6 12.714 6 21s6.717 15 15 15c8.286 0 15-6.714 15-15S29.286 6 21 6z">
+				</path>
+			</svg>
+			<input class="inputBox" id="search-input" type="text" placeholder="Search For Products" onkeyup="searchProducts()">
+			<ul id="search-results" class="dropdown-list"></ul>
+		</div>
+		
+
+
+
 		<ul class="links">
 			<li><a href="/">Home</a></li>
 			<li><a href="/categories">Categories</a></li>
@@ -76,15 +90,6 @@
 			<% } %>
 		</a></li>
 	</div>
-
-
-	<div class="search">
-		<button type="submit" class="searchButton" onclick="searchRedirect()">
-			<i class="fa fa-search"></i>
-		</button>
-		<input type="text" class="searchTerm" id="search-input" placeholder="What are you looking for?" onkeyup="searchProducts()">
-		<ul id="search-results" class="dropdown-list"></ul>
-	</div>
 </header>
 
 
@@ -118,12 +123,8 @@
 						resultsContainer.style.display = 'block';
 						data.forEach(product => {
 							let listItem = document.createElement('li');
-							// listItem.textContent = product.name;
-							// listItem.onclick = function() {
-							// 	document.getElementById("search-input").value = product.name;
-							// 	resultsContainer.style.display = 'none';
-							// 	searchRedirect();
-							// };
+							
+							
 							// Create a container for the product name, image, and price
 							let productInfo = document.createElement('div');
 							productInfo.innerHTML = `
@@ -161,9 +162,4 @@
 			window.location.href = `/search/products?q=${encodeURIComponent(query)}`;
 		}
 	}
-
-
-	// function showCategories() {
-	// 	console.log("Pressed showCategories");
-	// }
 </script>
