--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
 
 
 		<div class="inputBox_container">
-			<svg class="search_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" alt="search icon">
+			<svg onclick="searchRedirect()" class="search_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" alt="search icon" >
 				<path d="M46.599 46.599a4.498 4.498 0 0 1-6.363 0l-7.941-7.941C29.028 40.749 25.167 42 21 42 9.402 42 0 32.598 0 21S9.402 0 21 0s21 9.402 21 21c0 4.167-1.251 8.028-3.342 11.295l7.941 7.941a4.498 4.498 0 0 1 0 6.363zM21 6C12.717 6 6 12.714 6 21s6.717 15 15 15c8.286 0 15-6.714 15-15S29.286 6 21 6z">
 				</path>
 			</svg>
@@ -28,25 +28,25 @@
 		</ul>
 
 		<!-- Dynamic Sign In/Sign Up or Profile Icon -->
-        <% if (session.user) { %>
-            <!-- User Logged In: Profile Icon -->
-            <li class="dropdown">
-                <button class="profile-btn">
-                    <i class="fa fa-user-circle" aria-hidden="true"></i>
-                </button>
-                <div class="dropdown-menu">
-                    <a href="/profile">My Profile</a>
-                    <a href="/orders">My Orders</a>
-                    <a href="/reviews">My Reviews</a>
-                    <form action="/login/logout" method="POST">
-                        <button type="submit" class="logout-btn">Logout</button>
-                    </form>
-                </div>
-            </li>
-        <% } else { %>
-            <!-- User Not Logged In: Sign In/Sign Up Buttons -->
-            <li><a href="/login" class="nav-btn">Sign In</a></li>
-        <% } %>
+		<% if (session.user) { %>
+			<!-- User Logged In: Profile Icon -->
+			<li class="dropdown">
+				<button class="profile-btn">
+					<i class="fa fa-user-circle" aria-hidden="true"></i>
+				</button>
+				<div class="dropdown-menu">
+					<a href="/profile">My Profile</a>
+					<a href="/orders">My Orders</a>
+					<a href="/reviews">My Reviews</a>
+					<form action="/login/logout" method="POST">
+						<button type="submit" class="logout-btn">Logout</button>
+					</form>
+				</div>
+			</li>
+		<% } else { %>
+			<!-- User Not Logged In: Sign In/Sign Up Buttons -->
+			<li><a href="/login" class="nav-btn">Sign In</a></li>
+		<% } %>
 
 		<a href="/cart" class="action_btn">
 			<i class="fa fa-shopping-cart" style="font-size: 20px; position: relative;"></i>
@@ -63,25 +63,25 @@
 		<li><a href="/contact">Contact</a></li>
 
 		<!-- Dynamic Sign In/Sign Up or Profile Icon -->
-        <% if (session.user) { %>
-            <!-- User Logged In: Profile Icon -->
-            <li class="dropdown">
-                <button class="profile-btn">
-                    <i class="fa fa-user-circle" aria-hidden="true"></i>
-                </button>
-                <div class="dropdown-menu">
-                    <a href="/profile">My Profile</a>
-                    <a href="/orders">My Orders</a>
-                    <a href="/reviews">My Reviews</a>
-                    <form action="/login/logout" method="POST">
-                        <button type="submit" class="logout-btn">Logout</button>
-                    </form>
-                </div>
-            </li>
-        <% } else { %>
-            <!-- User Not Logged In: Sign In/Sign Up Buttons -->
-            <li><a href="/login" class="nav-btn">Sign In</a></li>
-        <% } %>
+		<% if (session.user) { %>
+			<!-- User Logged In: Profile Icon -->
+			<li class="dropdown">
+				<button class="profile-btn">
+					<i class="fa fa-user-circle" aria-hidden="true"></i>
+				</button>
+				<div class="dropdown-menu">
+					<a href="/profile">My Profile</a>
+					<a href="/orders">My Orders</a>
+					<a href="/reviews">My Reviews</a>
+					<form action="/login/logout" method="POST">
+						<button type="submit" class="logout-btn">Logout</button>
+					</form>
+				</div>
+			</li>
+		<% } else { %>
+			<!-- User Not Logged In: Sign In/Sign Up Buttons -->
+			<li><a href="/login" class="nav-btn">Sign In</a></li>
+		<% } %>
 
 
 		<li><a href="/cart" class="action_btn"><i class="fa fa-shopping-cart" style="font-size:16px"></i>
