--- a/views/style/nav_bar.css
+++ b/views/style/nav_bar.css
@@ -51,6 +51,29 @@ header {
 	font-weight: bold;
 }
 
+.enh_search {
+	font-size: 30px;
+	background: linear-gradient(to left,violet,indigo, blue, green, yellow, orange, red);
+	-webkit-background-clip: text;
+	color: transparent;
+
+
+	-webkit-mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,.2) 50%,#000 75%);
+    mask-image: linear-gradient(45deg,#000 25%,rgba(0,0,0,.2) 50%,#000 75%);
+    -webkit-mask-size: 800%;
+    mask-size: 800%;
+    -webkit-mask-position: 0;
+    mask-position: 0;
+}
+
+.enh_search:hover {
+	transition: mask-position 1s ease,-webkit-mask-position 1s ease;
+    -webkit-mask-position: 120%;
+    mask-position: 120%;
+    opacity: 1;
+	color: transparent;
+}
+
 .svg:hover {
 	pointer-events: visible;
 }
